--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRS VISION | Manager</title>
-    <!-- Ícones para PWA/Navegador -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Ícone CRS Atualizado -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23000000'/%3E%3Ctext x='50' y='65' font-family='Arial, sans-serif' font-size='40' font-weight='900' fill='%23ffffff' text-anchor='middle'%3ECRS%3C/text%3E%3C/svg%3E" />
     <meta name="theme-color" content="#000000" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -39,14 +39,43 @@
       .light ::-webkit-scrollbar-thumb { background: #ccc; }
 
       @media print {
-        @page { size: landscape; margin: 1cm; }
-        .no-print { display: none !important; }
-        body { background: white !important; color: black !important; }
-        .print-content { width: 100% !important; margin: 0 !important; padding: 0 !important; border: none !important; box-shadow: none !important; }
-        /* Garantir que o conteúdo scrollável seja impresso completamente */
-        body, #root, div { height: auto !important; overflow: visible !important; display: block !important; }
-        nav, aside { display: none !important; }
-        * { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }
+        @page { 
+          size: A4; 
+          margin: 10mm; 
+        }
+        
+        body { 
+          background-color: white !important; 
+          color: black !important; 
+          font-size: 12pt;
+          -webkit-print-color-adjust: exact !important; 
+          print-color-adjust: exact !important;
+        }
+
+        /* Esconde elementos de navegação e interface */
+        .no-print, nav, aside, button, input, .search-bar { 
+          display: none !important; 
+        }
+
+        /* Reseta layout para fluxo normal de documento */
+        .print-content, #root, main { 
+          width: 100% !important; 
+          margin: 0 !important; 
+          padding: 0 !important; 
+          overflow: visible !important; 
+          height: auto !important; 
+          position: static !important;
+          display: block !important;
+        }
+
+        /* Garante que tabelas e elementos não quebrem feio */
+        tr, .break-inside-avoid { 
+          page-break-inside: avoid; 
+        }
+        
+        thead { 
+          display: table-header-group; 
+        }
       }
     </style>
   <script type="importmap">
